--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3"
   },
