--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "core-js": "^3.4.8",
+    "material-design-icons": "^3.0.1",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-i18n": "^8.0.0",
@@ -16,9 +17,9 @@
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-router": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-router": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-i18n": "^0.6.0",
