--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.8",
     "material-design-icons": "^3.0.1",
+    "v-body-scroll-lock": "^1.1.3",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-i18n": "^8.0.0",
